[gd_scene load_steps=4 format=3 uid="uid://vjp2gl33abib"]

[ext_resource type="Script" path="res://Scripts/Player/Camera_Rig.gd" id="1_1skxb"]
[ext_resource type="Shader" path="res://assets/shaders/forground_shader.gdshader" id="2_x6dg6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dcald"]
shader = ExtResource("2_x6dg6")
shader_parameter/MULTIPLIER = 1.0
shader_parameter/SCALE = 0.9
shader_parameter/SOFTNESS = 0.45
shader_parameter/BASE_OPACITY = 1.0

[node name="Camera_Rig" type="Node3D"]
script = ExtResource("1_1skxb")

[node name="BaseCamera" type="Camera3D" parent="."]
cull_mask = 1047552

[node name="Background_ViewPortContainer" type="SubViewportContainer" parent="BaseCamera"]
offset_right = 1152.0
offset_bottom = 648.0

[node name="Background_ViewPort" type="SubViewport" parent="BaseCamera/Background_ViewPortContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="BackgroundCamera" type="Camera3D" parent="BaseCamera/Background_ViewPortContainer/Background_ViewPort"]
cull_mask = 1047553

[node name="Forground_ViewPortContainer2" type="SubViewportContainer" parent="BaseCamera"]
material = SubResource("ShaderMaterial_dcald")
offset_right = 1152.0
offset_bottom = 648.0

[node name="Forground_ViewPort" type="SubViewport" parent="BaseCamera/Forground_ViewPortContainer2"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="ForgroundCamera" type="Camera3D" parent="BaseCamera/Forground_ViewPortContainer2/Forground_ViewPort"]
cull_mask = 1047554
